firebase mandar datos

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h2>Teseractus</h2>
     <div>
       <!-- Ejemplo de formulario -->
-      <form id="ventaForm">
-        <label for="nombreCliente">Nombre del Cliente:</label>
-        <input type="text" id="nombreCliente" name="nombreCliente" required />
-        <label for="monto">Monto:</label>
-        <input type="number" id="monto" name="monto" required />
-        <label for="fechaVenta">Fecha:</label>
-        <input type="date" id="fechaVenta" name="fechaVenta" required />
-        <label for="tipoVenta">Tipo de Venta:</label>
-        <select id="tipoVenta" name="tipoVenta" required>
+      <form id="saleForm">
+        <label for="saleDate">Fecha:</label>
+        <input type="date" id="saleDate" name="saleDate" required />
+        <label for="clientName">Nombre del Cliente:</label>
+        <input type="text" id="clientName" name="clientName" required />
+        <label for="saleAmount">Monto:</label>
+        <input type="number" id="saleAmount" name="saleAmount" required />
+        <label for="typeSale">Tipo de Venta:</label>
+        <select id="typeSale" name="typeSale" required>
           <option value="tinturas">Tinturas</option>
           <option value="sublimados">Sublimados</option>
           <option value="libreria">Librería</option>
@@ -28,16 +28,18 @@
           <option value="hebillas">Hebillas</option>
         </select>
 
-        <button type="button" onclick="registrarVenta()">
+        <button id="saleSubmit">
           Registrar Venta
         </button>
       </form>
+      <div id="salesContainer">
+
+      </div>
     </div>
 
-    <!-- Agrega estos scripts en tu HTML -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-database.js"></script>
-    <script src="script.js"></script>
+    
+    <script type="module" src="firebase.js"></script>
+
+    <script type="module" src="script.js"></script>
   </body>
 </html>
