funcion de eliminar dato de base de datos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <option value="hebillas">Hebillas</option>
         </select>
         <button id="saleSubmit">
-          Registrar Venta
+          Guardar
         </button>
       </form>
 
