--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teseractus</title>
+    <link rel="shortcut icon" href="teseractusIcon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header></header>
