--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teseractus</title>
-    <link rel="shortcut icon" href="teseractusIcon.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="teseractusTranspBlack.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/minty/bootstrap.min.css"
