--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
-              <h4>Añadir venta</h4>
+              <h4 id="card-title">Añadir venta</h4>
               <form id="saleForm">
                 <label for="saleDate">Fecha:</label>
                 <input type="date" id="saleDate" name="saleDate" required />
